Refactoring fully working

--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -78,7 +78,7 @@
     "scalefactor = 30.0\n",
     "Efieldvector = np.array([0,1,0])\n",
     "potentialDipole = dipole(scalefactor, Efieldvector)\n",
-    "integrator.setExternalRodPotential(potentialDipole)"
+    "integrator.setExternalPotential(potentialDipole)"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "        prevstate[j] = 1*part.state\n",
     "    integrator.integrate(partlist)\n",
     "    if i%1000 == 0:\n",
-    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
+    "        print(\"Percentage complete: \", 100*i/timeIters, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
