--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "# Define Gay Berne potential\n",
     "potentialGB = gayBerne(3.0,5.0,5.0,1.0)\n",
-    "integrator.setPairRodPotential(potentialGB)"
+    "integrator.setPairPotential(potentialGB)"
    ]
   },
   {
@@ -156,6 +156,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def gayBerneEvaluate(p1,p2,or1,or2):\n",
+    "    part1 = msmrd2.particle(1.0, 1.0, p1, or1)\n",
+    "    part2 = msmrd2.particle(1.0, 1.0, p2, or2)\n",
+    "    return potentialGB.evaluate(part1, part2)\n",
+    "    \n",
     "# Plot potential for aligned and misaligned particles\n",
     "dist = np.arange(0, 2, 0.01)\n",
     "pos1 = np.array([[i, 0., 0.] for i in dist])\n",
@@ -165,8 +170,8 @@
     "or2 = np.array([1.,0.,0.])\n",
     "or3 = np.array([0.,1.,0.])\n",
     "or4 = np.array([0.,1.,0.])\n",
-    "Epot_end2end = [potentialGB.evaluate(p1,pos2,or1,or2) for p1 in pos1]\n",
-    "Epot_side2side = [potentialGB.evaluate(p1,pos3,or3,or4) for p1 in pos1]"
+    "Epot_end2end = [gayBerneEvaluate(p1,pos2,or1,or2) for p1 in pos1]\n",
+    "Epot_side2side = [gayBerneEvaluate(p1,pos3,or3,or4) for p1 in pos1]"
    ]
   },
   {
@@ -178,6 +183,13 @@
     "plt.plot(dist+3, Epot_end2end)\n",
     "plt.plot(dist+1, Epot_side2side)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -196,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
