--- a/examples/patchyProteins.ipynb
+++ b/examples/patchyProteins.ipynb
@@ -54,7 +54,7 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbodyMix' # Mix indicates there can be different types of rigidbody particles\n",
+    "bodytype = 'rigidbody' \n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
@@ -88,7 +88,7 @@
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
     "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
-    "integrator.setPairRigidBodyMixPotential(potentialPatchyProtein)"
+    "integrator.setPairPotential(potentialPatchyProtein)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 50000000\n",
+    "timesteps = 500000 #50000000\n",
     "stride = 1000 #1000\n",
     "datafile  = open('../data/vmd/patchyProteins.xyz', 'w')\n",
     "for i in range(timesteps):\n",
@@ -143,6 +143,13 @@
    "outputs": [],
    "source": [
     "# Calculate potential for aligned and misaligned molecules\n",
+    "def patchyProteinEvaluate(p1,p2,or1,or2,type1,type2):\n",
+    "    part1 = msmrd2.particle(1.0, 1.0, p1, or1)\n",
+    "    part1.setType(type1)\n",
+    "    part2 = msmrd2.particle(1.0, 1.0, p2, or2)\n",
+    "    part2.setType(type2)\n",
+    "    return potentialPatchyProtein.evaluate(part1, part2)\n",
+    "\n",
     "dist = np.arange(0, 2*sigma, 0.01)\n",
     "pos1 = np.array([0., 0., 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
@@ -169,8 +176,8 @@
     "                   np.sin(0.5*phi2p )*u[1],\n",
     "                   np.sin(0.5*phi2p )*u[2]]) \n",
     "\n",
-    "potantialAligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
-    "potantialMisaligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
+    "potantialAligned = [patchyProteinEvaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
+    "potantialMisaligned = [patchyProteinEvaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
    ]
   },
   {
@@ -193,7 +200,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potentialPatchyProtein.forceTorque(pos1,pos2[20],theta1p,theta2p, 0, 1)"
+    "part1 = msmrd2.particle(1.0, 1.0, pos1, theta1p)\n",
+    "part1.setType(0)\n",
+    "part2 = msmrd2.particle(1.0, 1.0, pos2[20], theta2p)\n",
+    "part2.setType(1)\n",
+    "potentialPatchyProtein.forceTorque(part1, part2)"
    ]
   },
   {
