--- a/examples/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/patchyProteinsMarkovSwitch.ipynb
@@ -54,7 +54,7 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbodyMix' # Mix indicates there can be different types of rigidbody particles\n",
+    "bodytype = 'rigidbody' # Mix indicates there can be different types of rigidbody particles\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
@@ -88,7 +88,7 @@
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
     "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
-    "integrator.setPairRigidBodyMixPotential(potentialPatchyProtein)"
+    "integrator.setPairPotential(potentialPatchyProtein)"
    ]
   },
   {
@@ -135,6 +135,13 @@
     "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles)\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
