--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -120,7 +120,7 @@
     "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
-    "integrator.setPairRigidBodyPotential(potentialPatchyParticle)"
+    "integrator.setPairPotential(potentialPatchyParticle)"
    ]
   },
   {
@@ -161,6 +161,11 @@
    "outputs": [],
    "source": [
     "# Calculate potential for aligned and misaligned molecules\n",
+    "def patchyParticlesEvaluate(p1,p2,or1,or2):\n",
+    "    part1 = msmrd2.particle(1.0, 1.0, p1, or1)\n",
+    "    part2 = msmrd2.particle(1.0, 1.0, p2, or2)\n",
+    "    return potentialPatchyParticle.evaluate(part1, part2)\n",
+    "\n",
     "dist = np.arange(0, 2*sigma, 0.01)\n",
     "pos1 = np.array([0., 0., 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
@@ -187,8 +192,8 @@
     "                   np.sin(0.5*phi2p )*u[1],\n",
     "                   np.sin(0.5*phi2p )*u[2]]) \n",
     "\n",
-    "potantialAligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1,theta2) for p2 in pos2]\n",
-    "potantialMisaligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1p,theta2p) for p2 in pos2]"
+    "potantialAligned = [patchyParticlesEvaluate(pos1,p2,theta1,theta2) for p2 in pos2]\n",
+    "potantialMisaligned = [patchyParticlesEvaluate(pos1,p2,theta1p,theta2p) for p2 in pos2]"
    ]
   },
   {
@@ -211,7 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potentialPatchyParticle.forceTorque(pos1,pos2[20],theta1p,theta2p)"
+    "part1 = msmrd2.particle(1.0, 1.0, pos1, theta1)\n",
+    "part2 = msmrd2.particle(1.0, 1.0, pos2[20], theta2p)\n",
+    "potentialPatchyParticle.forceTorque(part1,part2)"
    ]
   },
   {
@@ -316,20 +323,6 @@
     "yy = U(x, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
     "plt.plot(x,yy, '-b')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -348,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
