Example patchyProteinMarkovSwitch working

--- a/examples/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/patchyProteinsMarkovSwitch.ipynb
@@ -11,8 +11,9 @@
     "import msmrd2\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.potentials import patchyProtein\n",
-    "from msmrd2.integrators import overdampedLangevin as odLangevin"
+    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.potentials import patchyProteinMarkovSwitch\n",
+    "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS"
    ]
   },
   {
@@ -23,15 +24,17 @@
    "source": [
     "# Define two particle list of rigid body particles\n",
     "numparticles = 2\n",
+    "state = 0\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
     "positionList = [np.array([1.0,0,0]), np.array([-1.,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "for i in range(numparticles):           \n",
-    "    part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
-    "    part.setType(i)\n",
-    "    pyPartlist.append(part)"
+    "for i in range(numparticles):      \n",
+    "    ptype = i\n",
+    "    part = msmrd2.particleMS(ptype, state,D, Drot, positionList[i], orientationList[i])\n",
+    "    pyPartlist.append(part)\n",
+    "pyPartlist[0].setMSMoff()"
    ]
   },
   {
@@ -42,7 +45,24 @@
    "source": [
     "# Create list of particles that can be read from msmrd\n",
     "# Note the particles in this list will be independent from the python list.\n",
-    "partlist = msmrd2.integrators.particleList(pyPartlist)"
+    "partlist = msmrd2.integrators.particleMSList(pyPartlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define CTMSM\n",
+    "MSMtype = 1\n",
+    "ratematrix = np.array([[-5.0,5.0],[6.0,-6.0]])\n",
+    "seed = 0 # If seed = -1 uses random device as seed\n",
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)\n",
+    "Dlist = np.array([0.5, 1.0])\n",
+    "Drotlist = np.array([0.5, 1.0])\n",
+    "markovModel.setD(Dlist)\n",
+    "markovModel.setDrot(Drotlist)"
    ]
   },
   {
@@ -53,9 +73,9 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 0 # Seed = -1 used random device as seed\n",
+    "seed = 0 # If seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # Mix indicates there can be different types of rigidbody particles\n",
-    "integrator = odLangevin(dt, seed, bodytype) \n",
+    "integrator = odLangevinMS(markovModel, dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
   },
@@ -87,8 +107,8 @@
     "                       np.array([0.,0.,1.]),\n",
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
-    "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
-    "integrator.setPairPotential(potentialPatchyProtein)"
+    "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
   },
   {
@@ -98,7 +118,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 5000 #50000000\n",
+    "timesteps = 50000 #50000000\n",
     "stride = 100 #1000\n",
     "datafile  = open('../data/vmd/patchyProteinsMS.xyz', 'w')\n",
     "for i in range(timesteps):\n",
@@ -124,7 +144,10 @@
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v6)) + '\\n')\n",
     "            if part.type == 1:\n",
     "                v0 = part.position\n",
-    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                if part.state == 0:\n",
+    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                else:\n",
+    "                    v1 = 1.0*v0\n",
     "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
@@ -135,13 +158,6 @@
     "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles)\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
