Final patchyParticleAngular before MSM

--- a/examples/patchyParticlesAngular.ipynb
+++ b/examples/patchyParticlesAngular.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
-    "numparticles = 5\n",
+    "numparticles = 2\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -87,7 +87,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 2 # Seed = -1 used random device as seed\n",
+    "seed = -1 #2 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(0.1)"
@@ -146,7 +146,7 @@
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
-    "    if i%5000 == 0:\n",
+    "    if i%10000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
