--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -66,6 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "integrator1.__class__.mro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Integrate only one particle and print position and orientation\n",
     "timesteps = 50\n",
     "# Need to define a one particle list (note part1 object is not modified when list is modified)\n",
