Simulation binding still in progress

--- a/examples/testSimulation.ipynb
+++ b/examples/testSimulation.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Creates simulation\n",
-    "sim = msmrd2.simulation(integrator, partlist)"
+    "sim = msmrd2.simulation(integrator)"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Creates trajectory object to store trajectory data\n",
-    "bufferSize = 1024\n",
+    "bufferSize = 1000\n",
     "traj = msmrd2.trajectories.trajectoryPositionOrientation(Nparticles, bufferSize)"
    ]
   },
@@ -82,10 +82,10 @@
    "outputs": [],
    "source": [
     "# Run simulation\n",
-    "timesteps = 50000\n",
-    "stride = 100\n",
-    "filename = \"simTest.h5\"\n",
-    "sim.run(timesteps, traj, stride, filename)"
+    "timesteps = 5000\n",
+    "stride = 1\n",
+    "filename = \"simTestH5\"\n",
+    "sim.run(partlist, timesteps, traj, stride, filename)"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = 'testH5.h5'\n",
+    "filename = 'simTestH5.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -172,6 +172,15 @@
    "outputs": [],
    "source": [
     "read_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0%1"
    ]
   },
   {
