--- a/examples/testSimulation.ipynb
+++ b/examples/testSimulation.ipynb
@@ -61,18 +61,7 @@
    "outputs": [],
    "source": [
     "# Creates simulation\n",
-    "sim = msmrd2.simulation(integrator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creates trajectory object to store trajectory data\n",
-    "bufferSize = 1000\n",
-    "traj = msmrd2.trajectories.trajectoryPositionOrientation(Nparticles, bufferSize)"
+    "sim = msmrd2.simulation(partlist,integrator)"
    ]
   },
   {
@@ -83,49 +72,10 @@
    "source": [
     "# Run simulation\n",
     "timesteps = 5000\n",
+    "bufferSize = 1024\n",
     "stride = 1\n",
     "filename = \"simTestH5\"\n",
-    "sim.run(partlist, timesteps, traj, stride, filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Integrates and stores in trajectory\n",
-    "for i in range(25):\n",
-    "    traj.sampleRelative(i,plist)\n",
-    "    intg.integrate(plist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prints trajectory data\n",
-    "original_data = np.array(traj.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj.write2file(\"test\", traj.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj.write2H5file(\"testH5\", traj.data)"
+    "sim.run(timesteps, bufferSize, stride, filename)"
    ]
   },
   {
@@ -153,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_data == original_data"
+    "read_data[9999]"
    ]
   },
   {
@@ -181,6 +131,15 @@
    "outputs": [],
    "source": [
     "0%1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2000+4000+6000+8000+10000"
    ]
   },
   {
