Multiples output styles for simulation  working

--- a/examples/testSimulation.ipynb
+++ b/examples/testSimulation.ipynb
@@ -75,7 +75,9 @@
     "bufferSize = 1024\n",
     "stride = 1\n",
     "filename = \"simTestH5\"\n",
-    "sim.run(timesteps, bufferSize, stride, filename)"
+    "H5output = True\n",
+    "chunked = True\n",
+    "sim.run(timesteps, stride, bufferSize, H5output, chunked, filename)"
    ]
   },
   {
