--- a/examples/testSimulation.ipynb
+++ b/examples/testSimulation.ipynb
@@ -36,7 +36,9 @@
    "outputs": [],
    "source": [
     "# Create list of particles to be integrated\n",
-    "# Note the particles in the list will be independent from the original ones.\n",
+    "# Note the particles in the list will be independent from the original ones. \n",
+    "# Also note that in this case the python particleList will not be modified since the integration \n",
+    "# is done inside the c++ code. This definition is simply to initialize the c++ simulation. \n",
     "partlist = msmrd2.integrators.particleList([part1,part2])\n",
     "Nparticles = np.size(partlist)"
    ]
@@ -61,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Creates simulation\n",
-    "sim = msmrd2.simulation(partlist,integrator)"
+    "sim = msmrd2.simulation(integrator)"
    ]
   },
   {
@@ -73,11 +75,12 @@
     "# Run simulation\n",
     "timesteps = 5000\n",
     "bufferSize = 1024\n",
-    "stride = 1\n",
-    "filename = \"simTestH5\"\n",
-    "H5output = True\n",
-    "chunked = True\n",
-    "sim.run(timesteps, stride, bufferSize, H5output, chunked, filename)"
+    "stride = 10\n",
+    "filename = \"../data/simTestH5\"\n",
+    "outTxt = False\n",
+    "outH5 = True\n",
+    "outChunked = True\n",
+    "sim.run(partlist, timesteps, stride, bufferSize, filename, outTxt, outH5, outChunked)"
    ]
   },
   {
@@ -87,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = 'simTestH5.h5'\n",
+    "filename = '../data/simTestH5.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -105,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_data[9999]"
+    "read_data"
    ]
   },
   {
@@ -116,40 +119,6 @@
    "source": [
     "len(read_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0%1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2000+4000+6000+8000+10000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
