--- a/examples/testSimulation.ipynb
+++ b/examples/testSimulation.ipynb
@@ -72,11 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run simulation\n",
+    "# Run simulation     \n",
     "timesteps = 5000\n",
     "bufferSize = 1024\n",
     "stride = 10\n",
-    "filename = \"../data/simTestH5\"\n",
+    "filename = \"../data/simTestH5\" #Note the folder where the data is saved should already exist, e.g. ../data/ \n",
     "outTxt = False\n",
     "outH5 = True\n",
     "outChunked = True\n",
