--- a/examples/patchyParticlesAngular.ipynb
+++ b/examples/patchyParticlesAngular.ipynb
@@ -166,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
