--- a/examples/testReadH5.ipynb
+++ b/examples/testReadH5.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../data/trimer/simTrimer0000.h5'\n",
+    "filename = '../data/trimer/simTrimer0001.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -26,7 +26,7 @@
     "\n",
     "# Get the data\n",
     "#data = list(f[a_group_key])\n",
-    "read_data0 = np.array(f[a_group_key])"
+    "read_data1 = np.array(f[a_group_key])"
    ]
   },
   {
@@ -75,9 +75,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
