Modifications to patchyParticleAngular potential

--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.001\n",
-    "seed = 0 # Seed = -1 used random device as seed\n",
+    "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator1 = odLangevin(dt, seed, bodytype) \n",
     "# Second integrator to test list integration\n",
@@ -88,12 +88,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "[0.99439403, 0.9928422,  0.99968701]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
