--- a/examples/patchyParticlesAngular.ipynb
+++ b/examples/patchyParticlesAngular.ipynb
@@ -87,10 +87,10 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = -1 #2 # Seed = -1 used random device as seed\n",
+    "seed = -1 #2 # Negative seed, uses random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
-    "integrator.setKbT(0.1)"
+    "#integrator.setKbT(0.1)"
    ]
   },
   {
@@ -114,12 +114,13 @@
    "source": [
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
-    "strength = 200.0\n",
+    "strength = 160 #200.0\n",
+    "angularStrength = 20 #200.0\n",
     "patch1 = np.array([1.,0.,0.])\n",
     "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
     "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
-    "potentialPatchyParticleAngular = patchyParticleAngular(sigma, strength, patchesCoordinates)\n",
+    "potentialPatchyParticleAngular = patchyParticleAngular(sigma, strength, angularStrength, patchesCoordinates)\n",
     "integrator.setPairPotential(potentialPatchyParticleAngular)"
    ]
   },
@@ -130,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 5000000\n",
+    "timesteps = 10000000\n",
     "stride = 2500 #1000\n",
     "datafile  = open('../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
@@ -166,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
