Update patchyDimer trajectory class

--- a/examples/patchyParticlesAngular.ipynb
+++ b/examples/patchyParticlesAngular.ipynb
@@ -116,12 +116,27 @@
     "sigma = 1.0\n",
     "strength = 160 #200.0\n",
     "angularStrength = 20 #200.0\n",
+    "angleDiff = 3*np.pi/5.0\n",
     "patch1 = np.array([1.,0.,0.])\n",
-    "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
+    "patch2 = np.array([np.cos(angleDiff),np.sin(angleDiff),0.])\n",
     "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticleAngular = patchyParticleAngular(sigma, strength, angularStrength, patchesCoordinates)\n",
     "integrator.setPairPotential(potentialPatchyParticleAngular)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Symmetry quaternion(s) in particle (structural symmetry of certain rotations encoded in a quaternion) \n",
+    "rotationAxisAngle = np.pi*np.array([np.cos(0.5*angleDiff),np.sin(0.5*angleDiff),0.]) # 180 deree rotation along axis\n",
+    "symQuaternion = quats.angle2quat(rotationAxisAngle)\n",
+    "symmetryQuaternionsList = [symQuaternion]\n",
+    "for i in range(numparticles):\n",
+    "    partlist[i].setSymmetryQuaternions(len(symmetryVectorList), symmetryQuaternionsList)"
    ]
   },
   {
