--- a/examples/testReadH5.ipynb
+++ b/examples/testReadH5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys: ['msmrd_data']\n"
+     ]
+    }
+   ],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../data/trimer/simTrimer0001.h5'\n",
+    "filename = '../data/dimer/simDimer0001.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -26,7 +34,7 @@
     "\n",
     "# Get the data\n",
     "#data = list(f[a_group_key])\n",
-    "read_data1 = np.array(f[a_group_key])"
+    "read_data = np.array(f[a_group_key])"
    ]
   },
   {
@@ -35,7 +43,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(read_data0)"
+    "np.array(read_data1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.48730801, -0.60007824, ..., -0.02490505,\n",
+       "         0.74056567, -0.21189422],\n",
+       "       [ 0.        ,  0.33815546, -0.9789393 , ..., -0.26517381,\n",
+       "         0.71459148, -0.07793023],\n",
+       "       [ 0.05      ,  0.54452145, -0.25884117, ...,  0.03091136,\n",
+       "         0.80187724, -0.10964504],\n",
+       "       ...,\n",
+       "       [19.9       , -0.87012205,  0.89910289, ...,  0.59620754,\n",
+       "        -0.60515642, -0.52129172],\n",
+       "       [19.95      , -1.46815047,  0.97805609, ..., -0.44398158,\n",
+       "         0.58213107,  0.57312753],\n",
+       "       [19.95      , -1.19652503,  0.55217629, ...,  0.70068409,\n",
+       "        -0.6174484 , -0.34540015]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_data"
    ]
   },
   {
@@ -75,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
