--- a/scripts/readDimerData.ipynb
+++ b/scripts/readDimerData.ipynb
@@ -9,7 +9,8 @@
     "import h5py\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import msmrd2.tools as msmrdtls"
+    "import msmrd2.tools as msmrdtls\n",
+    "import msmrd2.analysis as msmrdals"
    ]
   },
   {
@@ -18,10 +19,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define useful parameters\n",
     "dt = 0.00001\n",
-    "timesteps = 200000000\n",
-    "stride = 5000\n",
-    "maxentries = int(timesteps/stride)"
+    "timesteps = 20000000\n",
+    "stride = 2500\n",
+    "maxentries = int(timesteps/stride)\n",
+    "fnamebase = '../data/dimer/simDimer'\n",
+    "nfiles = 10"
    ]
   },
   {
@@ -30,20 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load H5 files into python list, each file one entry of the list\n",
-    "read_data=[]\n",
-    "nfiles = 100\n",
+    "# Load full trajectories\n",
+    "trajs = []\n",
     "for i in range(nfiles):\n",
-    "    filename = '../data/dimer/simDimer' + str(i).zfill(4) + '.h5'\n",
-    "    f = h5py.File(filename, 'r')\n",
-    "\n",
-    "    # List all groups (use the firs key)\n",
-    "    #print(\"Keys: %s\" % list(f.keys()))\n",
-    "    a_group_key = list(f.keys())[0]\n",
-    "\n",
-    "    # Get the data\n",
-    "    #data = list(f[a_group_key])\n",
-    "    read_data.append(np.array(f[a_group_key]))"
+    "    traj = msmrdals.loadTrajectory(fnamebase, i)\n",
+    "    trajs.append(traj)"
    ]
   },
   {
@@ -52,12 +47,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot relative position\n",
     "diffpos =[]\n",
+    "file=0\n",
     "for entry in range(maxentries):\n",
-    "    file=8\n",
-    "    time = read_data[file][entry][0]*dt\n",
-    "    part1pos = np.array(read_data[file][2*entry][1:4])\n",
-    "    part2pos = np.array(read_data[file][2*entry+1][1:4])\n",
+    "    time = trajs[file][entry][0]*dt\n",
+    "    part1pos = np.array(trajs[file][2*entry][1:4])\n",
+    "    part2pos = np.array(trajs[file][2*entry+1][1:4])\n",
     "    diffpos.append(np.linalg.norm(part1pos - part2pos))\n",
     "plt.plot(diffpos)"
    ]
@@ -68,12 +64,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot relative orientation\n",
     "difforient =[]\n",
-    "for entry in range(int(maxentries/2)):\n",
-    "    file=8\n",
-    "    time = read_data[file][entry][0]*dt\n",
-    "    part1orient = np.array(read_data[file][2*entry][4:8])\n",
-    "    part2orient = np.array(read_data[file][2*entry+1][4:8])\n",
+    "for entry in range(int(maxentries)):\n",
+    "    time = trajs[file][entry][0]*dt\n",
+    "    part1orient = np.array(trajs[file][2*entry][4:8])\n",
+    "    part2orient = np.array(trajs[file][2*entry+1][4:8])\n",
     "    relorient = msmrdtls.quaternions.relativeOrientation(part1orient, part2orient)\n",
     "    phi = msmrdtls.quaternions.quat2angle(relorient)\n",
     "    difforient.append(np.linalg.norm(phi))\n",
@@ -86,7 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_data0[3]==read_data1[3]"
+    "dtrajs = []\n",
+    "for i in range(nfiles):\n",
+    "    dtraj = msmrdals.loadDiscreteTrajectory(fnamebase, i)\n",
+    "    dtrajs.append(dtraj)"
    ]
   },
   {
@@ -95,7 +94,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(read_data[0])"
+    "# Create distionaries to keep track of specific events. Needed to calculate rates\n",
+    "boundstates = 2\n",
+    "orientations = 6\n",
+    "timeDict, eventDict = msmrdals.createStatesDictionaries(boundstates, orientations)"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=np.array(read_data[0][0][4:8])"
+    "timeDict, eventDict = msmrdals.extractRates(dtrajs, timeDict, eventDict)"
    ]
   },
   {
@@ -113,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a[0:3]"
+    "eventDict"
    ]
   },
   {
@@ -122,11 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conjugate(q):\n",
-    "    s = q[0]\n",
-    "    p = -q[1:4]\n",
-    "    qout = np.insert(p,0,s)\n",
-    "    return qout"
+    "for i, j in zip(range(5), range(5)):\n",
+    "    print(i,j)"
    ]
   },
   {
@@ -135,16 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conjugate(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
+    "for key in timeDict:\n",
+    "    print(key)"
    ]
   },
   {
@@ -157,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
