--- a/scripts/readDimerData.ipynb
+++ b/scripts/readDimerData.ipynb
@@ -106,7 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timeDict, eventDict = msmrdals.extractRates(dtrajs, timeDict, eventDict)"
+    "dt = trajs[0][2][0] - trajs[0][0][0]\n",
+    "rateDict, timeDict, eventDict = msmrdals.extractRates(dtrajs, timeDict, eventDict)"
    ]
   },
   {
@@ -115,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eventDict"
+    "rateDict"
    ]
   },
   {
@@ -124,18 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, j in zip(range(5), range(5)):\n",
-    "    print(i,j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in timeDict:\n",
-    "    print(key)"
+    "sliceIndex = a.find('->')"
    ]
   },
   {
