--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -132,11 +132,12 @@
    "outputs": [],
    "source": [
     "# Save Symmetry quaternion(s) in particle (structural symmetry of certain rotations encoded in a quaternion) \n",
+    "# Just proof of concept, not really used in this example\n",
     "rotationAxisAngle = np.pi*np.array([np.cos(0.5*angleDiff),np.sin(0.5*angleDiff),0.]) # 180 deree rotation along axis\n",
     "symQuaternion = quats.angle2quat(rotationAxisAngle)\n",
     "symmetryQuaternionsList = [symQuaternion]\n",
     "for i in range(numparticles):\n",
-    "    partlist[i].setSymmetryQuaternions(len(symmetryVectorList), symmetryQuaternionsList)"
+    "    partlist[i].setSymmetryQuaternions(len(symmetryQuaternionsList ), symmetryQuaternionsList)"
    ]
   },
   {
@@ -148,7 +149,7 @@
     "# Integrate particle list and print only positions \n",
     "timesteps = 10000000\n",
     "stride = 2500 #1000\n",
-    "datafile  = open('../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(3*len(partlist)) + '\\n')\n",
@@ -168,16 +169,9 @@
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
     "                                     outfname = \"patchyParticlesAngular\", \n",
-    "                                     tclfname = \"../data/vmd/patchyParticlesAngular2vmd.tcl\")\n",
+    "                                     tclfname = \"../../data/vmd/patchyParticlesAngular2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -196,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
