--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -11,8 +11,9 @@
     "import msmrd2\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.potentials import patchyProtein\n",
-    "from msmrd2.integrators import overdampedLangevin as odLangevin"
+    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.potentials import patchyProteinMarkovSwitch\n",
+    "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS"
    ]
   },
   {
@@ -23,15 +24,17 @@
    "source": [
     "# Define two particle list of rigid body particles\n",
     "numparticles = 2\n",
+    "state = 0\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
     "positionList = [np.array([1.0,0,0]), np.array([-1.,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "for i in range(numparticles):           \n",
-    "    part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
-    "    part.setType(i)\n",
-    "    pyPartlist.append(part)"
+    "for i in range(numparticles):      \n",
+    "    ptype = i\n",
+    "    part = msmrd2.particleMS(ptype, state,D, Drot, positionList[i], orientationList[i])\n",
+    "    pyPartlist.append(part)\n",
+    "pyPartlist[0].setMSMoff()"
    ]
   },
   {
@@ -42,7 +45,24 @@
    "source": [
     "# Create list of particles that can be read from msmrd\n",
     "# Note the particles in this list will be independent from the python list.\n",
-    "partlist = msmrd2.integrators.particleList(pyPartlist)"
+    "partlist = msmrd2.integrators.particleMSList(pyPartlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define CTMSM\n",
+    "MSMtype = 1\n",
+    "ratematrix = np.array([[-5.0,5.0],[6.0,-6.0]])\n",
+    "seed = 0 # If seed = -1 uses random device as seed\n",
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)\n",
+    "Dlist = np.array([0.5, 1.0])\n",
+    "Drotlist = np.array([0.5, 1.0])\n",
+    "markovModel.setD(Dlist)\n",
+    "markovModel.setDrot(Drotlist)"
    ]
   },
   {
@@ -53,9 +73,9 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 0 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbody' \n",
-    "integrator = odLangevin(dt, seed, bodytype) \n",
+    "seed = 0 # If seed = -1 uses random device as seed\n",
+    "bodytype = 'rigidbody' # Mix indicates there can be different types of rigidbody particles\n",
+    "integrator = odLangevinMS(markovModel, dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
   },
@@ -87,8 +107,8 @@
     "                       np.array([0.,0.,1.]),\n",
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
-    "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
-    "integrator.setPairPotential(potentialPatchyProtein)"
+    "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
   },
   {
@@ -98,9 +118,9 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 500000 #50000000\n",
-    "stride = 1000 #1000\n",
-    "datafile  = open('../data/vmd/patchyProteins.xyz', 'w')\n",
+    "timesteps = 50000 #50000000\n",
+    "stride = 100 #1000\n",
+    "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(9) + '\\n')\n",
@@ -124,7 +144,10 @@
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v6)) + '\\n')\n",
     "            if part.type == 1:\n",
     "                v0 = part.position\n",
-    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                if part.state == 0:\n",
+    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                else:\n",
+    "                    v1 = 1.0*v0\n",
     "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
@@ -132,79 +155,8 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyProteins(numparticles = numparticles)\n",
+    "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate potential for aligned and misaligned molecules\n",
-    "def patchyProteinEvaluate(p1,p2,or1,or2,type1,type2):\n",
-    "    part1 = msmrd2.particle(1.0, 1.0, p1, or1)\n",
-    "    part1.setType(type1)\n",
-    "    part2 = msmrd2.particle(1.0, 1.0, p2, or2)\n",
-    "    part2.setType(type2)\n",
-    "    return potentialPatchyProtein.evaluate(part1, part2)\n",
-    "\n",
-    "dist = np.arange(0, 2*sigma, 0.01)\n",
-    "pos1 = np.array([0., 0., 0.])\n",
-    "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
-    "phi1 = 0.0\n",
-    "phi2 = np.pi\n",
-    "phi1p = np.pi\n",
-    "phi2p = 0.0\n",
-    "u = np.array([0.,0.,1.]) #rotationAxis\n",
-    "# Quaternions that rotate phi along axis u\n",
-    "theta1 = np.array([np.cos(0.5*phi1 ),\n",
-    "                   np.sin(0.5*phi1 )*u[0],\n",
-    "                   np.sin(0.5*phi1 )*u[1],\n",
-    "                   np.sin(0.5*phi1 )*u[2]]) \n",
-    "theta2 = np.array([np.cos(0.5*phi2 ),\n",
-    "                   np.sin(0.5*phi2 )*u[0],\n",
-    "                   np.sin(0.5*phi2 )*u[1],\n",
-    "                   np.sin(0.5*phi2 )*u[2]]) \n",
-    "theta1p = np.array([np.cos(0.5*phi1p ),\n",
-    "                   np.sin(0.5*phi1p )*u[0],\n",
-    "                   np.sin(0.5*phi1p )*u[1],\n",
-    "                   np.sin(0.5*phi1p )*u[2]]) \n",
-    "theta2p = np.array([np.cos(0.5*phi2p ),\n",
-    "                   np.sin(0.5*phi2p )*u[0],\n",
-    "                   np.sin(0.5*phi2p )*u[1],\n",
-    "                   np.sin(0.5*phi2p )*u[2]]) \n",
-    "\n",
-    "potantialAligned = [patchyProteinEvaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
-    "potantialMisaligned = [patchyProteinEvaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot potential\n",
-    "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
-    "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
-    "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
-    "plt.legend()\n",
-    "plt.xlim([0,2*sigma])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part1 = msmrd2.particle(1.0, 1.0, pos1, theta1p)\n",
-    "part1.setType(0)\n",
-    "part2 = msmrd2.particle(1.0, 1.0, pos2[20], theta2p)\n",
-    "part2.setType(1)\n",
-    "potentialPatchyProtein.forceTorque(part1, part2)"
    ]
   },
   {
@@ -231,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
