--- a/examples/models/evaluatePotentials.ipynb
+++ b/examples/models/evaluatePotentials.ipynb
@@ -31,9 +31,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Need to define a particle to call potential function. The potential is evalluated at the particle position\n",
+    "D = 1\n",
+    "Drot = 0\n",
+    "position = np.array([0.5,0.2,0.4])\n",
+    "orientation = np.array([1, 0, 0, 0])\n",
+    "particle = msmrd2.particle(D, Drot, position, orientation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Evaluate at some point\n",
-    "r = np.array([0.5,0.2,0.4])\n",
-    "print(gauss3Dpot.evaluate(r),gauss3Dpot.forceTorque(r))"
+    "print(gauss3Dpot.evaluate(particle),gauss3Dpot.forceTorque(particle))"
    ]
   },
   {
@@ -50,7 +63,8 @@
     "    f = np.zeros([100,100])\n",
     "    for i in range(100):\n",
     "        for j in range(100):\n",
-    "            f[i,j] = gauss3Dpot.evaluate([x[i],y[j],zcut])\n",
+    "            particle.setPosition([x[i],y[j],zcut])\n",
+    "            f[i,j] = gauss3Dpot.evaluate(particle)\n",
     "    plt.contourf(f,np.arange(-15., 1., .2))\n",
     "    plt.clim(-8.,1.)\n",
     "    plt.colorbar()"
@@ -96,8 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u=np.array([1,0,0])\n",
-    "print(dipolePot.evaluate(r,u),dipolePot.forceTorque(r,u))"
+    "particle.setOrientVector([1,0,0])\n",
+    "print(dipolePot.evaluate(particle),dipolePot.forceTorque(particle))"
    ]
   },
   {
@@ -124,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
