--- a/examples/models/gayBerne.ipynb
+++ b/examples/models/gayBerne.ipynb
@@ -115,7 +115,7 @@
     "# Integrate particle list and print only positions \n",
     "timesteps = 20000\n",
     "stride = 20\n",
-    "datafile  = open('../data/vmd/gayBerne.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/gayBerne.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(2*len(partlist)) + '\\n')\n",
@@ -131,9 +131,17 @@
     "    if i%1000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
-    "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_gayBerne(numparticles = numparticles)\n",
     "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate TCL script to visualize with VMD\n",
+    "msmrdvis.generateTCL_gayBerne(numparticles = numparticles, tclfname = \"../../data/vmd/gayBerne2vmd.tcl\")"
    ]
   },
   {
@@ -208,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
