--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -132,7 +132,7 @@
     "# Integrate particle list and print only positions \n",
     "timesteps = 5000000\n",
     "stride = 2500 #1000\n",
-    "datafile  = open('../data/vmd/patchyParticles.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/patchyParticles.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(3*len(partlist)) + '\\n')\n",
@@ -150,7 +150,7 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles)\n",
+    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteins2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
@@ -208,6 +208,13 @@
     "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
     "plt.legend()\n",
     "plt.xlim([0,2*sigma])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other tests"
    ]
   },
   {
@@ -341,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
