Dictionary connection python->c for msmsrdMarkovModel

--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools as msmrdtls\n",
-    "import msmrd2.analysis as msmrdals"
+    "import msmrd2.analysis as msmrdals\n",
+    "from msmrd2 import msmrdMarkovModel"
    ]
   },
   {
@@ -117,6 +118,24 @@
    "outputs": [],
    "source": [
     "rateDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=msmrdMarkovModel(3,6,-1,rateDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.getRate('b2->b1')"
    ]
   },
   {
