Added test for msmMarkovModel dicitionary

--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -144,6 +144,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "msmA = a.getMSM('35->b1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msmA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sliceIndex = a.find('->')"
    ]
   },
