Improved patchydimer discretization and added tools

--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import h5py\n",
+    "import msmrd2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools as msmrdtls\n",
@@ -144,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msmA = a.getMSM('35->b1')"
+    "msmA = a.getMSM('15a')"
    ]
   },
   {
@@ -153,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msmA."
+    "msmA.getTransitionMatrix()"
    ]
   },
   {
@@ -162,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sliceIndex = a.find('->')"
+    "part1.state"
    ]
   },
   {
